--- a/paper.bib
+++ b/paper.bib
@@ -42,7 +42,7 @@ doi = {10.1162/qss_a_00071},
 year = {2020}
 }
 
-@booklet{Jayabalasingham:gfBs-pcB,
+@booklet{Jayabalasingham,
 title = {{Identifying research supporting the United Nations sustainable development goals}},
 author = {Jayabalasingham, B and Boverhof, R and Agnew, K and Klein, L},
 year = {2021}
