--- a/paper.bib
+++ b/paper.bib
@@ -46,3 +46,10 @@ doi = {10.5281/zenodo.3817445}
   url = {https://ap-unsdsn.org/regional-initiatives/universities-sdgs/},
   urldate = {2010-09-30}
 }
+
+@book{SGD_report2021,
+author = {UN},
+title = {{The Sustainable Development Goals Report 2021}},
+publisher = {United Nations},
+year = {2021},
+}
