--- a/paper.bib
+++ b/paper.bib
@@ -13,12 +13,33 @@ author = {Jayabalasingham, B and Boverhof, R and Agnew, K and Klein, L},
 year = {2021}
 }
 
-
 @booklet{aurora,
-title = {{Search Queries for "Mapping Research Output to the Sustainable Development Goals (SDGs)" v5.0}},
-author = {{Aurora Universities Network (AUR)}},
-year = {2020},
-doi = {10.5281/zenodo.3817445}
+  author       = {Vanderfeesten, Maurice and
+                  Otten, René and
+                  Spielberg, Eike},
+  title        = {{Search Queries for "Mapping Research Output to the
+                   Sustainable Development Goals (SDGs)" v5.0}},
+  month        = jul,
+  year         = 2020,
+  publisher    = {Zenodo},
+  version      = {5.0},
+  doi          = {10.5281/zenodo.3817445},
+  url          = {https://doi.org/10.5281/zenodo.3817445}
+}
+
+
+
+
+@booklet{elsevier,
+  author       = {Agnew, Kevin and
+                  Francescon, Domiziana and
+                  Martin, Rachel and
+                  Rhannam, Maha and
+                  Schemm, Ylann},
+  title        = {{The Power of Data to Advance the SDGs. Mapping                     research for the Sustainable Development Goals},
+  year         = 2020,
+  publisher    = {Elsevier},
+  url          = {https://www.elsevier.com/__data/assets/pdf_file/0004/1058179/Elsevier-SDG-Report-2020.pdf}
 }
 
 
@@ -40,7 +61,7 @@ doi = {10.5281/zenodo.3817445}
 }
 
 @online{sdsn,
-  author = {{Sustainable Development Solutions Network (SDSN)}},
+  author = {{Sustainable Development Solutions Network}},
   title = {Compiled list of SDG keywords},
   year = 2021,
   url = {https://ap-unsdsn.org/regional-initiatives/universities-sdgs/},
