--- a/paper.bib
+++ b/paper.bib
@@ -36,11 +36,11 @@ year = {2021}
                   Martin, Rachel and
                   Rhannam, Maha and
                   Schemm, Ylann},
-  title        = {{The Power of Data to Advance the SDGs. Mapping                     research for the Sustainable Development Goals},
+  title        = {{The Power of Data to Advance the SDGs. Mapping                     research for the Sustainable Development Goals}},
   year         = 2020,
   publisher    = {Elsevier},
   url          = {https://www.elsevier.com/__data/assets/pdf_file/0004/1058179/Elsevier-SDG-Report-2020.pdf}
-}
+  }
 
 
 
