--- a/paper.bib
+++ b/paper.bib
@@ -1,5 +1,5 @@
 
-@article{Bautista2019,
+@dataset{Bautista2019,
 author = {Bautista, N},
 title = {SDG Ontology},
 year = {2019},
@@ -7,13 +7,15 @@ doi= {10.6084/m9.figshare.11106113.v1}
 }
 
 
-@booklet{Jayabalasingham,
+@dataset{Jayabalasingham,
 title = {{Identifying research supporting the United Nations sustainable development goals}},
 author = {Jayabalasingham, B and Boverhof, R and Agnew, K and Klein, L},
+doi= {10.17632/87txkw7khs.1},
+url= {https://data.mendeley.com/datasets/87txkw7khs/1},
 year = {2021}
 }
 
-@booklet{aurora,
+@dataset{aurora,
   author       = {Vanderfeesten, Maurice and
                   Otten, René and
                   Spielberg, Eike},
@@ -60,7 +62,7 @@ year = {2021}
   url          = {https://doi.org/10.5281/zenodo.3567769}
 }
 
-@online{sdsn,
+@dataset{sdsn,
   author = {{Sustainable Development Solutions Network}},
   title = {Compiled list of SDG keywords},
   year = 2021,
